--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -218,10 +218,10 @@ Applying discriminative machine learning models to detect notes is a dominant ap
 
 \subsection{SVM}
 
-\citet{poliner2006discriminative}
+
 
 % use support vector machines to predict note presence or absence at 10ms time steps based on
-First, short-time Fourier transforms were applied to the audio data.  Then,  87(they omit the highest note) one-versus-all (OVA) SVM classifiers were trained, one for each note.  The SVM's were then used to predict the test data, and HMM's were used for post-process smoothing.
+\citet{poliner2006discriminative} first used short-time Fourier transforms were applied to the audio data.  Then,  87(they omit the highest note) one-versus-all (OVA) SVM classifiers were trained, one for each note.  The SVM's were then used to predict the test data, and HMM's were used for post-process smoothing.
 % one vs all
 % frequency partition
 
